# ink-utils

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yaml
contracts/ink-group-simple/: Cargo.toml  README.md  contract.rs  helpers.rs
contracts/ink-group-simple/.cargo/: config.toml
contracts/ink-group-simple/src/: contract.rs  lib.rs
contracts/ink-voting-group/: Cargo.toml  lib.rs
contracts/ink-voting-group/src/: contract.rs  error.rs
traits/ink-group/: Cargo.toml  README.md
traits/ink-group/src/: error.rs  lib.rs  message.rs  storage.rs
