[package]
name          = "ink-group-simple"
version       = "0.1.0"
authors       = ["Alessandro Baldassarre <alessandro.baldassarre.dev@gmail.com>"]
edition       = "2021"
license       = "UNLICENSED"
repository    = "https://github.com/alessandro-baldassarre/ink-utils"
documentation = "https://github.com/alessandro-baldassarre/ink-utils#readme"
keywords      = ["blockchain", "polkadot", "ink"]

[lib]
crate-type = ["cdylib"]

[dependencies]
ink        = { version = "4.0.0-rc", default-features = false }
scale      = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
ink-group  = { path = "../../traits/ink-group/", default-features = false }
thiserror-no-std = { version = "2.0.2" }

[dev-dependencies]
ink_e2e = { version = "4.0.0-rc" } 

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "ink-group/std"
]
ink-as-dependency = []

e2e-tests = []
