[package]
name          = "ink-voting-group"
version       = "0.1.0"
authors       = ["Alessandro Baldassarre <alessandro.baldassarre.dev@gmail.com>"]
edition       = "2021"
license       = "UNLICENSED"
repository    = "https://github.com/alessandro-baldassarre/ink-utils"
documentation = "https://github.com/alessandro-baldassarre/ink-utils#readme"
keywords      = ["blockchain", "polkadot", "ink"]

[lib]
crate-type = ["cdylib"]

[dependencies]
ink        = { git = "https://github.com/paritytech/ink", rev = "4655a8b4413cb50cbc38d1b7c173ad426ab06cde", default-features = false }
scale      = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
openbrush  = { git = "https://github.com/727-Ventures/openbrush-contracts/", tag = "3.0.0-beta", default-features = false, features = ["psp22", "ownable"] }
ink-group  = { path = "../../traits/ink-group/", default-features = false }
thiserror-no-std = { version = "2.0.2" }

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
    "ink-group/std"
]
ink-as-dependency = []
