[package]
name          = "ink-group"
version       = "0.1.0"
authors       = ["Alessandro Baldassarre <alessandro.baldassarre.dev@gmail.com>"]
edition       = "2021"
license       = "UNLICENSED"
repository    = "https://github.com/alessandro-baldassarre/ink-utils/traits/ink-group"
documentation = "https://github.com/alessandro-baldassarre/ink-utils/traits/ink-group#readme"
keywords      = ["blockchain", "polkadot", "ink"]

[lib]
crate-type = ["rlib"]

[dependencies]
ink        = { version = "4.0.0-rc", default-features = false }
scale      = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
thiserror-no-std = { version = "2.0.2"}

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]

